[package]
name = "typed-lists"
version = "0.1.0"
edition = "2021"

[lib]
name = "typed_lists"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "typed_lists._typed_lists_ext"

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "multiple-pymethods"] }
rayon = "1.6.1"
paste = "1.0.11"
