[project]
name = "typed-lists"
version = "0.2.0"
requires-python = ">=3.7"
readme = "README.md"
license = {text="Apache 2.0"}
keywords = ["lists", "rust"]
authors = [
  {email = "zacharywcoleman@gmail.com"},
  {name = "Zach Coleman"}
]
homepage = "https://github.com/zachcoleman/typed-lists"
repository = "https://github.com/zachcoleman/tpyed-lists"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
repository = "https://github.com/zachcoleman/typed-lists"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov[all]"
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
strip = true

[tool.isort]
profile="black"

[tool.bandit]
exclude_dirs=["tests"]
